# vibespatial-raster

./: .gitignore  AGENTS.md  BUG_SWEEP.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: .review-completed  settings.json
.claude/agents/: cuda-engineer.md  gpu-code-reviewer.md  maintainability-reviewer.md  performance-reviewer.md  python-engineer.md  zero-copy-reviewer.md
.claude/commands/: gpu-kernel.md
.claude/hooks/: file-guard.sh  pre-land-gate.sh
.claude/skills/commit/: SKILL.md
.claude/skills/cuda-optimizer/: SKILL.md
.claude/skills/gpu-code-review/: SKILL.md
.claude/skills/gpu-kernel/: SKILL.md
.claude/skills/new-kernel-checklist/: SKILL.md
.claude/skills/pre-land-review/: SKILL.md
.claude/skills/raster-domain/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: conf.py  index.md
docs/_static/css/: vibespatial.css
docs/_static/js/: vibespatial.js
docs/dev/: architecture.md  design-decisions.md  index.md  kernels.md  testing.md  vibespatial-integration.md
docs/user/: api.md  index.md  install.md  quickstart.md  vibespatial.md
scripts/: bench.py
src/vibespatial/raster/: __init__.py  algebra.py  buffers.py  dispatch.py  distance.py  geokeys.py  histogram.py  io.py  label.py  memory.py  nvimgcodec_io.py  polygonize.py  rasterize.py  resample.py  tiling.py  zonal.py
src/vibespatial/raster/kernels/: __init__.py  algebra.py  ccl.py  distance.py  focal.py  histogram.py  morphology.py  polygonize.py  resample.py
tests/: test_band_expression_kernel.py  test_dispatch.py  test_focal_stats.py  test_geokeys.py  test_memory.py  test_multiband_warnings.py  test_nvimgcodec_io.py  test_nvrtc_disk_cache.py  test_raster_algebra.py  test_raster_algebra_cpu.py  test_raster_band_expression.py  test_raster_buffers.py  test_raster_distance.py  test_raster_expression.py  test_raster_hillshade.py  test_raster_histogram.py  test_raster_io.py  test_raster_label.py  test_raster_polygonize.py  test_raster_rasterize.py  test_raster_resample.py  test_raster_zonal.py  test_slope_aspect_boundary.py  test_slope_aspect_dispatch.py  test_terrain_derivatives.py  test_tiling.py
