[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vibespatial-raster"
version = "0.1.6"
description = "GPU-first raster processing for vibespatial"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
authors = [
    { name = "Ben Jarmak", email = "ben@vibespatial.dev" },
]
keywords = ["raster", "gpu", "cuda", "gis", "geospatial", "cupy", "nvrtc", "geotiff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "vibespatial>=0.1.4",
  "scipy>=1.14",
]

[project.optional-dependencies]
io = [
  "rasterio>=1.4",
]
cu12 = [
  "vibespatial[cu12]",
  "cuda-python>=12,<13",
  "cuda-cccl[cu12]",
  "cupy-cuda12x>=13",
  "nvidia-nvimgcodec-cu12[all]>=0.6.0",
]
cu13 = [
  "vibespatial[cu13]",
  "cuda-python>=13",
  "cuda-cccl[cu13]",
  "cupy-cuda13x>=14",
  "nvidia-nvimgcodec-cu13[all]>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/jarmak-personal/vibespatial-raster"
Repository = "https://github.com/jarmak-personal/vibespatial-raster"
Documentation = "https://jarmak-personal.github.io/vibespatial-raster/"
Issues = "https://github.com/jarmak-personal/vibespatial-raster/issues"

[dependency-groups]
dev = [
  "furo>=2025.12.19",
  "myst-parser>=5.0.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "rasterio>=1.4",
  "sphinx>=9.1.0",
  "sphinx-autoapi>=3.4",
]

[tool.uv]
conflicts = [
  [
    { extra = "cu12" },
    { extra = "cu13" },
  ],
]

[tool.hatch.build.targets.wheel]
packages = ["src/vibespatial"]

[tool.pytest.ini_options]
addopts = ["-ra"]
testpaths = ["tests"]
markers = [
  "gpu: requires a CUDA-capable NVIDIA GPU",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "PERF",  # perflint
  "RUF",   # ruff-specific
]
ignore = [
  "E501",    # line too long (formatter handles this)
  "B007",    # unused loop variable
  "B905",    # zip strict
  "PERF401", # manual list comprehension
  "RUF001",  # ambiguous unicode
  "RUF002",  # ambiguous unicode docstring
  "RUF003",  # ambiguous unicode comment
  "RUF022",  # __all__ not sorted (we group by category)
  "RUF046",  # int(round(...)) — redundant but clarifies intent
  "RUF059",  # unused unpacked variable (noisy in tests with tuple returns)
]

[tool.ruff.lint.isort]
known-first-party = ["vibespatial"]
